--- a/Resources/Private/Styles/Global/_Variables.scss
+++ b/Resources/Private/Styles/Global/_Variables.scss
@@ -7,3 +7,4 @@
 }
 
 $typo3-color: #ff8700;
+$nice-grey: #e1e1e1; // only notice for nicoles further work
